css/main.css
.list-group-item span{
	min-width: 5%;
	display: inline-block;
}

.list-group-item ul ul, #divBSCT{
	margin-left:0;
	padding:0;
	list-style-type: none;}

body{
	min-width: 300px;s
}


.list-group-item-nested{
	border:none;
	display: inline-block;
	list-style-type:none; 
}

#divSave span{
	min-width: 100%;
}
#divSave input{
	min-width: 15%;
}

.topDiv img{
	margin:0 auto;
}

.contentDiv{
 	padding-top: 1%;
 }

.row{
	text-align: center;
}

div.topDiv{
	overflow: hidden;
	top:0px;
	height: auto;
	padding:1% 0;
	text-align: center;
	position: fixed;
	box-shadow: 0 1px 0 rgba(12,13,14,0.1), 0 1px 3px rgba(12,13,14,0.1), 0 4px 20px rgba(12,13,14,0.035), 0 1px 1px rgba(12,13,14,0.025);
	width: 100%;
	background-color: #FFF;
	z-index: 100;
}

div.contentDiv{
	font-family: calibri, sans-serif;
	z-index: 1;
	margin-top:5vw;
}

div#admin{
	margin-top:0;
}

#resultContainer{
	margin-top:12vw;
}

@media screen and (min-width: 1401px)
{
	img.delete-img{
		width: 200px;
		height: 200px;
	}
}

@media screen and (max-width: 1400px)
{
	.container {
    	width: 65%;
	}

	div#resultContainer .div-placeholder {
		margin:0% 8% -14px 8%;
	}

	#resultContainer {
    	margin-top: 6vw;
	}

	h3, h4 {
    	color: #777777;
   	 	margin-top: -1%;
	}

	img.delete-img{
		width: 150px;
		height: 150px;
	}

	.row{
		margin-bottom: 2%;
		margin-top: 5%;
	}
}

@media screen and (max-width:750px)
{
	.row{
		margin-bottom: 8%;
		margin-top: 16%;
	}

	.topDiv img{
		width:30%;
	}

	h3{
	font-size:1em;
		margin-top: 0;
	}

	#resultContainer {
    	margin-top: 5vw;
	}

	div#resultContainer .div-placeholder {
		margin:0% 8% -14px 8%;
	}

	h3#titleResult{
		margin-top:12vw;
	}

	img.delete-img{
		width: 100px;
		height: 100px;
	}

}

@media (max-width:640px)
{

	.row{
		margin-bottom: 8%;
		margin-top: 12%;
	}

	h3{
	font-size:0.8em;
	}

	div#resultContainer .div-placeholder {
		margin:0% 8% -14px 8%;
	}

	#resultContainer{
		margin-top:12vw;
	}

	img.delete-img{
		width: 100px;
		height: 100px;
	}
}

@media (max-width:370px)
{

	h3{
		font-size:0.5em;
		margin-top: 0;
	}

	.row{
		margin-bottom: 8%;
	}
}	

div.div-placeholder{
 	padding-right: 1%;
    padding-left: 1%;
    width: 34%;
    min-width: 34%;
    max-width: 34%;
    float: left;
    margin: 1% 8% 0 8%;
}

div.div-placeholder form input[type="image"]{
	width: 100%;
}

h3, h4{
	color:#777777;
}

.div-placeholder img{
	vertical-align: middle;
    background: 0;
    border: 0;
    padding: 0;
    margin: 0 0 2vw 0;
    width: 100%;	   
}

.btn_img{
	background-color: #FFF;
	border:0;
}

#contentContainer{
	text-align: left;
}
    
#contentContainer ul li{
	margin-left:0;
	padding:0;
	list-style-type: none;
 }

 .clearfix {
    clear: both;
}

div.container div#market div.flag{
	margin-top:5vw;
}

div.contentDiv input[type="submit"].submit-style{
	width: 40%;
	margin-bottom: 10%;
}

div.table-responsive{
	margin-top: 3%;
}

.table>tbody>tr>td{
	padding:0 0 0 1%;
	text-align: center;
	vertical-align: middle;
}

.table>tbody>tr>td.align-left{
	text-align: left;
}

.table>tbody>tr>td.check-box-manage{
	padding-left:0;
}

.btn-holder{
	text-align: right;
}

#navBar{
	margin-bottom: 5%;
	font-weight: bold;
}

